--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cinnamon-menus (2.4.1) rebecca; urgency=medium
+
+  * Merge debian folder improvements from debian git
+  * gir1.2-cmenu-3.0.install based on gir libdir
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 13 Jan 2015 12:07:31 +0100
+
 cinnamon-menus (2.4.0) rebecca; urgency=medium
 
   * 2.4.0
