--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon-menus (2.6.0) rafaela; urgency=medium
+
+  * 2.6.0
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 19 May 2015 17:05:48 +0200
+
 cinnamon-menus (2.5.0) unstable; urgency=medium
 
   * Bump for development
