--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cinnamon-menus (3.0.0) sarah; urgency=medium
+
+  [ monsta ]
+  * configure.ac: drop obsolete macro
+
+ -- Clement Lefebvre <root@linuxmint.com>  Sat, 23 Apr 2016 15:56:27 +0100
+
 cinnamon-menus (2.8.0) rosa; urgency=medium
 
   * 2.8.0
