--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+cinnamon-menus (3.6.0) sylvia; urgency=medium
+
+  [ Jasper St. Pierre ]
+  * Revert "Memory leak fixes"
+  * Memory leak fixes
+  * entry-directories: Fix unref
+
+  [ Giovanni Campagna ]
+  * entry-directories: don't modify a list while iterating it
+  * entry-directories: protect event handling for directories
+
+  [ Florian Müllner ]
+  * libmenu: Remove support for legacy-dirs
+
+  [ Jasper St. Pierre ]
+  * entry-directories: Only log about invalidations if it was handled
+
+ -- Clement Lefebvre <root@linuxmint.com>  Mon, 23 Oct 2017 13:20:27 +0100
+
 cinnamon-menus (3.4.0) sonya; urgency=medium
 
   [ leigh123linux ]
