--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon-menus (5.0.0) uma; urgency=medium
+
+  * 5.0.0
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 27 May 2021 15:04:30 +0100
+
 cinnamon-menus (4.8.3) ulyssa; urgency=medium
 
   [ Lars Mueller ]
