--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+cinnamon-menus (5.6.0) vera; urgency=medium
+
+  [ Rick Calixte ]
+  * Fix .gitignore for builds
+
+  [ Michael Webster ]
+  * Use github instead of circleci.
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 15 Nov 2022 11:24:43 +0000
+
 cinnamon-menus (5.4.0) vanessa; urgency=medium
 
   [ Clement Lefebvre ]
