--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cinnamon-menus (5.8.0) victoria; urgency=medium
+
+  [ Michael Webster ]
+  * github workflow: Add optional ssh session.
+
+ -- Clement Lefebvre <root@linuxmint.com>  Thu, 01 Jun 2023 13:44:59 +0100
+
 cinnamon-menus (5.6.0) vera; urgency=medium
 
   [ Rick Calixte ]
