--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon-menus (6.2.0) wilma; urgency=medium
+
+  * packaging: Forbid compilation if the symbols file is outdated
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 11 Jun 2024 15:30:27 +0100
+
 cinnamon-menus (6.0.0) virginia; urgency=medium
 
   [ Rick Calixte ]
