--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon-menus (6.6.0) zena; urgency=medium
+
+  * 6.6.0
+
+ -- Clement Lefebvre <root@linuxmint.com>  Tue, 25 Nov 2025 14:13:30 +0000
+
 cinnamon-menus (6.4.0) xia; urgency=medium
 
   * 6.4.0
